try fix too close

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -142,6 +142,7 @@ a small {
 }
 
 ul{
+  line-height: 28px;
   list-style-image:url(data:image/gif;base64,R0lGODlhBQAIALMAAAAAAFxcXGZmZnV1dX5+foaGho2NjZaWlpubmwAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAUKAAAALAAAAAAFAAgAAAQQEMh5wgTnojKJoZMxTMIUAQA7);
 }
 
